# deletebackground

./: .gitignore  BUILD_WINDOWS.md  build.bat  casecut.spec  pyproject.toml  requirements.txt  run_casecut.py  status.json
.github/workflows/: build-windows.yml
docs/: Инструкция_контент-менеджеру.md
installer/: casecut.iss
scripts/: pilot.py  screenshot_ui.py
src/casecut/: __init__.py  __main__.py  cli.py  paths.py
src/casecut/control/: __init__.py  gate.py
src/casecut/core/: __init__.py  align.py  holes.py  imageio.py  mask_apply.py  mask_edit.py  region_qa.py  silhouette.py
src/casecut/pipeline/: __init__.py  batch.py  processor.py
src/casecut/preview/: __init__.py  previews.py
src/casecut/store/: __init__.py  device_store.py
src/casecut/ui/: __init__.py  app.py  auto_page.py  canvas.py  imageqt.py  main_window.py  teach_page.py  worker.py
tests/: synth.py  test_batch.py  test_cli.py  test_core.py  test_gate.py  test_holes.py  test_imageio.py  test_magic_paths.py  test_mask_edit.py  test_openings.py  test_pipeline.py  test_ui_smoke.py
